# graphicalbattle

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Readme.md  character.c  character.h  class.c  class.h  entities.txt  entity.c  entity.h  event.c  event.h  game.c  game.h  main.c  main.h  map.c  map.h  map.txt  mapexplain.txt  sprite.c  sprite.h
actions/: tick.c  tick.h  triggers.c  triggers.h
actions/event/: keydown.c  keydown.h
fight/: damage.c  damage.h  fight.c  fight.h  log.c  log.h
fight/monster/: monster.c  monster.h
include/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_image.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_mixer.h  SDL_mouse.h  SDL_mutex.h  begin_code.h  close_code.h
lib/: err.c  main.h  readfile.c  xmalloc.c
lib/sdl/: main.h  rect.c  text.c  ximg_load.c  xupdate_window_surface.c
menu/: class.c  class.h  draw_menu.c  draw_menu.h  fight.c  fight.h
menu/class/: mc.c  mc.h
tools/mapcreator/: index.html  map.js
